--- a/src/index.html
+++ b/src/index.html
@@ -11,28 +11,47 @@
 </head>
 
 <body>
-    <nav class="mx-6 my-2">
-        <div class="flex items-end">
-            <img src="./img/Logo.svg" class="w-8">
-            <div class="w-full flex justify-end">
-                <ul class="flex flex-row justify-items-center text-xs">
-                    <a href="#">
-                        <li class="nav-item">Blog</li>
-                    </a>
-                    <a href="#">
-                        <li class="nav-item">Eventos</li>
-                    </a>
-                    <a href="#">
-                        <li class="nav-item">Productos Eco</li>
-                    </a>
-                    <a href="#">
-                        <li class="ml-2 acerca-de rounded-sm">Acerca de</li>
-                    </a>
-                </ul>
+    <div class="mx-6">
+        <nav class="my-2">
+            <div class="flex items-end">
+                <img src="./img/Logo.svg" class="w-10">
+                <div class="w-full flex justify-end">
+                    <ul class="flex flex-row">
+                        <a href="#">
+                            <li class="nav-item mx-2">Blog</li>
+                        </a>
+                        <a href="#">
+                            <li class="nav-item mx-2">Eventos</li>
+                        </a>
+                        <a href="#">
+                            <li class="nav-item mx-2">Productos Eco</li>
+                        </a>
+                        <a href="#">
+                            <li class="nav-item ml-2">Acerca de</li>
+                        </a>
+                    </ul>
+                </div>
             </div>
+            <hr class="mt-1">
+        </nav>
+        <div class="flex">
+            <div>
+                <h1 class="text-xl leading-tight mt-8 mb-4">
+                    ¡Se parte del cambio y empatiza por el medio ambiente!
+                </h1>
+                <p class="texto-land-Page">
+                    Todos en este planeta ( animales, plantas y hasta vos! ) queremos un mañana en el que podamos dormir
+                    tranquilos,
+                    ¿Cierto?
+                </p>
+                <div class="btn-animacion mt-2">
+                    <button class="btn-fondo">Más Información</button>
+                    <button class="btn">Más Información</button>
+                </div>
+            </div>
+            <img src="./img/Quetzal.jpg" class="w-2/5 mt-2">
         </div>
-        <hr class="mt-1">
-    </nav>
+    </div>
 </body>
 
 </html>
