--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='./output.css'>
     <link rel="shortcut icon" href="./img/Favicon.svg">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
         <nav class="my-2">
             <div class="flex items-end justify-center">
                 <img src="./img/Logo.svg" class="w-24">
-                <div class="hidden md:inline text-lg md:w-full md:flex md:justify-end" id="collapse-items">
+                <div class="hidden md:inline text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
                         <a href="#">
                             <li class="nav-item mx-2">Blog</li>
@@ -36,8 +36,8 @@
             </div>
             <hr class="mt-1 separador">
         </nav>
-        <div class="md:flex mb-2">
-            <div>
+        <section class="md:flex mb-2 items-center">
+            <div class="md:w-7/12">
                 <h1 class="text-3xl text-center md:text-left md:text-5xl leading-tight mt-8 mb-4">
                     ¡Se parte del cambio y empatiza por el medio ambiente!
                 </h1>
@@ -51,18 +51,62 @@
                     <button class="btn">Más Información</button>
                 </div>
             </div>
-            <div class="md:w-2/3">
-                <img src="./img/Quetzal.jpg" class="hidden md:inline md:mt-2 mt-20">
-                <img src="./img/Quetzal Responsive.png" class="md:hidden mt-20">
+            <img src="./img/Quetzal.jpg" class="md:w-5/12 md:inline hidden md:mt-2 xl:mt-8 mt-20">
+            <img src="./img/Quetzal Responsive.png" class="md:hidden mt-20">
+        </section>
+        <section class="mb-2 items-center flex flex-col-reverse md:flex-row">
+            <img src="./img/Blog-Ambiental.png" class="md:w-7/12 md:mt-2 img-landPage">
+            <div class="md:5/12">
+                <h2 class="text-2xl text-center md:text-left md:text-4xl mt-8 mb-4">Blog Ambiental</h2>
+                <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum dictum
+                    elit sit amet ligula eleifend, ut sollicitudin massa
+                    posuere. Sed condimen
+                    tum diam quis rhoncus fringilla.
+                </p>
+                <div class="link flex mt-4 md:justify-start justify-center">
+                    <a href="#">Empieza a leernos</a>
+                    <span class="material-symbols-outlined">
+                        arrow_forward_ios
+                    </span>
+                </div>
             </div>
-        </div>
-        <span class="material-symbols-outlined">
-            menu
-        </span>
-        <!-- <span class="material-symbols-outlined bg-slate-500">
-            menu
-        </span> -->
+        </section>
+        <section class="md:flex mb-2 items-center">
+            <div class="md:w-7/12">
+                <h2 class="text-2xl text-center md:text-left md:text-4xl mb-4">Eventos ambientales</h2>
+                <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum dictum
+                    elit sit amet ligula eleifend, ut sollicitudin massa
+                    posuere. Sed condimen
+                    tum diam quis rhoncus fringilla.
+                </p>
+                <div class="link flex mt-4 md:justify-start justify-center">
+                    <a href="#">Empieza a descubrirlos</a>
+                    <span class="material-symbols-outlined">
+                        arrow_forward_ios
+                    </span>
+                </div>
+            </div>
+            <img src="./img/Eventos-Ambientales.png" class="md:w-5/12 md:mt-2 mt-4">
+        </section>
+        <section class="mb-2 items-center flex flex-col-reverse md:flex-row">
+            <img src="./img/Productos-Ecologicos.png" class="md:w-7/12 img-landPage -mt-4">
+            <div class="md:5/12">
+                <h2 class="text-2xl text-center md:text-left md:text-4xl mt-8 mb-4">Venta de productos Ecológicos</h2>
+                <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum dictum
+                    elit sit amet ligula eleifend, ut sollicitudin massa
+                    posuere. Sed condimen
+                    tum diam quis rhoncus fringilla.
+                </p>
+                <div class="link flex mt-4 md:justify-start justify-center">
+                    <a href="#">Empieza a comprarlos</a>
+                    <span class="material-symbols-outlined">
+                        arrow_forward_ios
+                    </span>
+                </div>
+            </div>
+        </section>
     </div>
+    <script src="./js/funcionalidades.js"></script>
 </body>
 
 </html>
