creando rama blog

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                 <img src="./img/Logo.svg" class="w-24">
                 <div class="hidden md:inline text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
-                        <a href="#">
+                        <a href="./pages/Blog.html">
                             <li class="nav-item mx-2">Blog</li>
                         </a>
                         <a href="#">
@@ -121,9 +121,7 @@
                 menu
             </span>
         </div>
-        <div class="md:hidden mb-4" id="menu-opciones">
-
-        </div>
+        <div class="md:hidden mb-4" id="menu-opciones"></div>
     </div>
     <script src="./js/funcionalidades.js"></script>
 </body>
