Lista estructura para blog en desktop

--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,7 @@
         <div class="md:hidden mb-4" id="menu-opciones"></div>
     </div>
     <script src="./js/funcionalidades.js"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </body>
 
 </html>
