--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -35,6 +35,125 @@
             <hr class="mt-1 separador mb-8">
         </nav>
     </div>
+    <div class="mx-6">
+        <section>
+            <div class="flex items-center">
+                <img src="../img/Rectangulo-degradado.png" class="h-16 mr-4">
+                <h1 class="text-3xl text-center md:text-left md:text-5xl">
+                    Blog ambiental
+                </h1>
+            </div>
+            <div class="grid grid-cols-2 xl:grid-cols-12 gap-8 xl:gap-12 my-8">
+                <div id="rectangulo-degradado-fondo" class="flex items-center justify-end xl:col-span-5">
+                    <img src="../img/image-template-1.png" id="img-principal-blog">
+                </div>
+                <div class="xl:col-span-7">
+                    <p class="ml-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h2 class="text-2xl text-center md:text-left md:text-4xl my-4 entrada-blog">Lorem Ipsum porro
+                            quisquam est
+                            qui dolorem</h2>
+                    </a>
+                    <hr class="mt-1 separador-blog mb-8">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna. Praesent egestas consectetur erat, vitae consequat orci
+                        sodales a
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="grid grid-cols-3 gap-8 xl:gap-12 my-8">
+                <div>
+                    <img src="../img/image-template-2.png">
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna.
+                    </p>
+                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                </div>
+                <div>
+                    <img src="../img/image-template-3.png">
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna.
+                    </p>
+                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                </div>
+                <div>
+                    <img src="../img/image-template-4.png">
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna.
+                    </p>
+                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                </div>
+                <div>
+                    <img src="../img/image-template-2.png">
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna.
+                    </p>
+                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                </div>
+                <div>
+                    <img src="../img/image-template-3.png">
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna.
+                    </p>
+                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                </div>
+                <div>
+                    <img src="../img/image-template-4.png">
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
+                        eros. Fusce in nunc dictum,
+                        ornare neque ut, scelerisque urna.
+                    </p>
+                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </body>
 
 </html>
