ayudando al cargado de paginas

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
                         <a href="#">
                             <li class="nav-item mx-2">Productos Eco</li>
                         </a>
-                        <a href="#">
+                        <a href="./pages/AboutUs.html">
                             <li class="nav-item ml-2">Acerca de</li>
                         </a>
                     </ul>
