--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -26,7 +26,7 @@
                         <a href="#">
                             <li class="nav-item mx-2">Productos Eco</li>
                         </a>
-                        <a href="#">
+                        <a href="./AboutUs.html">
                             <li class="nav-item ml-2">Acerca de</li>
                         </a>
                     </ul>
@@ -34,8 +34,6 @@
             </div>
             <hr class="mt-1 separador mb-8">
         </nav>
-    </div>
-    <div class="mx-6">
         <section>
             <div class="flex items-center">
                 <img src="../img/Rectangulo-degradado.png" class="h-16 mr-4">
