cambiando imagenes y poniendo avatars

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <nav class="my-2">
             <div class="flex items-end justify-center">
                 <img src="./img/Logo.svg" class="w-24">
-                <div class="hidden md:inline text-lg md:w-full md:flex md:justify-end">
+                <div class="hidden text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
                         <a href="./pages/Blog.html">
                             <li class="nav-item mx-2">Blog</li>
@@ -61,7 +61,7 @@
                 <img src="./img/Quetzal Responsive.png" class="md:hidden mt-20">
             </section>
             <section class="mb-2 items-center flex flex-col-reverse md:flex-row">
-                <img src="./img/Blog-Ambiental.png" class="md:w-7/12 md:mt-2 img-landPage">
+                <img src="./img/Blog-Ambiental.svg" class="md:w-7/12 md:mt-2 img-landPage">
                 <div class="md:5/12">
                     <h2 class="text-2xl text-center md:text-left md:text-4xl mt-8 mb-4">Blog Ambiental</h2>
                     <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum
@@ -94,10 +94,10 @@
                         </span>
                     </div>
                 </div>
-                <img src="./img/Eventos-Ambientales.png" class="md:w-5/12 md:mt-2 mt-4">
+                <img src="./img/Eventos-Ambientales.svg" class="md:w-5/12 md:mt-2 mt-4">
             </section>
             <section class="mb-2 items-center flex flex-col-reverse md:flex-row">
-                <img src="./img/Productos-Ecologicos.png" class="md:w-7/12 img-landPage -mt-4">
+                <img src="./img/Productos-Ecologicos.svg" class="md:w-7/12 img-landPage -mt-4">
                 <div class="md:5/12">
                     <h2 class="text-2xl text-center md:text-left md:text-4xl mt-8 mb-4">Venta de productos Ecológicos
                     </h2>
