--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <div class="mx-6">
+    <div class="mx-8 xl:mx-24">
         <nav class="my-2">
             <div class="flex items-end justify-center">
                 <a href="../index.html"><img src="../img/Logo.svg" class="w-24"></a>
-                <div class="hidden md:inline text-lg md:w-full md:flex md:justify-end">
+                <div class="hidden text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
-                        <a href="#">
+                        <a href="./Blog.html">
                             <li class="nav-item mx-2">Blog</li>
                         </a>
                         <a href="#">
@@ -34,7 +34,46 @@
             </div>
             <hr class="mt-1 separador mb-8">
         </nav>
-
+        <div class="flex justify-center">
+            <h1 class="text-3xl md:text-left md:text-5xl mb-8">
+                ¿<span class="underline underline-offset-8">Quiénes</span> somos?
+            </h1>
+        </div>
+        <p class="text-center mx-36">
+            Somos estudiantes de la Universidad Rafael Landívar de Quetzaltenango, actualmente cursamos
+            por el ultimo
+            tramo de
+            nuestra aventura por la carrera de Ingeniería en Informática y Sistemas, alistándonos para que, en muy
+            poco tiempo,
+            podamos zambullirnos en aguas laborales
+        </p>
+        <div class="flex justify-center">
+            <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8 entrada-blog texto-verde">
+                Nuestro equipo
+            </h2>
+        </div>
+        <div class="grid grid-cols-4 gap-8">
+            <div>
+                <img src="../img/Fernando.svg">
+                <p class="texto-alterno text-center">Fernando Juarez</p>
+                <p>Front-end Developer</p>
+            </div>
+            <div>
+                <img src="../img/Kelvin.svg">
+                <p class="texto-alterno text-center">Kelvin Cano</p>
+                <p>UI Developer</p>
+            </div>
+            <div>
+                <img src="../img/Zoili.svg">
+                <p class="texto-alterno text-center">Zoila Sanchez</p>
+                <p>Back-end Developer</p>
+            </div>
+            <div>
+                <img src="../img/Guadaluper.svg">
+                <p class="texto-alterno text-center">Andrea Morales</p>
+                <p>Back-end Developer</p>
+            </div>
+        </div>
     </div>
 </body>
 
