--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -15,7 +15,7 @@
         <nav class="my-2">
             <div class="flex items-end justify-center">
                 <a href="../index.html"><img src="../img/Logo.svg" class="w-24"></a>
-                <div class="hidden md:inline text-lg md:w-full md:flex md:justify-end">
+                <div class="hidden text-lg md:w-full md:flex md:justify-end">
                     <ul class="flex flex-row">
                         <a href="#">
                             <li class="nav-item mx-2 nav-item-active">Blog</li>
