Acerca de Desktop

--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -48,30 +48,80 @@
             podamos zambullirnos en aguas laborales
         </p>
         <div class="flex justify-center">
-            <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8 entrada-blog texto-verde">
+            <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8 texto-verde">
                 Nuestro equipo
             </h2>
         </div>
         <div class="grid grid-cols-4 gap-8">
-            <div>
-                <img src="../img/Fernando.svg">
-                <p class="texto-alterno text-center">Fernando Juarez</p>
-                <p>Front-end Developer</p>
+            <a href="https://github.com/Rafterminador" target="_blank">
+                <div class="flex flex-col items-center">
+                    <img src="../img/Fernando.svg">
+                    <p class="texto-alterno text-center">Fernando Juarez</p>
+                    <p>Front-end Developer</p>
+                </div>
+            </a>
+            <a href="https://github.com/Allecan" target="_blank">
+                <div class="flex flex-col items-center">
+                    <img src="../img/Kelvin.svg">
+                    <p class="texto-alterno text-center">Kelvin Cano</p>
+                    <p>UI Developer</p>
+                </div>
+            </a>
+            <a href="https://github.com/ZoilaSanchez" target="_blank">
+                <div class="flex flex-col items-center">
+                    <img src="../img/Zoili.svg">
+                    <p class="texto-alterno text-center">Zoila Sanchez</p>
+                    <p>Back-end Developer</p>
+                </div>
+            </a>
+            <a href="https://github.com/AGMH16" target="_blank">
+                <div class="flex flex-col items-center">
+                    <img src="../img/Guadaluper.svg">
+                    <p class="texto-alterno">Andrea Morales</p>
+                    <p>Back-end Developer</p>
+                </div>
+            </a>
+        </div>
+        <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8">
+            ¿Por <span class="underline underline-offset-8">qué</span>?
+        </h2>
+        <div class="grid grid-cols-2 gap-8 items-center">
+            <div class="mr-8">
+                <p>
+                    El motivo de este proyecto es construir y desplegar un sitio web enfocado en representar uno de los
+                    17
+                    objetivos de
+                    desarrollo sostenible de la agenda 2030 de la ONU, para lo cual escogimos el objetivo #15 “Vida de
+                    ecosistemas
+                    terrestres”.
+                </p>
+                <br>
+                <p>
+                    Elegimos enfocarnos en este objetivo porque estamos convencidos que es muy importante concientizar
+                    acerca
+                    del medio
+                    ambiente para asi proteger a todas las personas, animales y plantas que somos parte de este medio
+                </p>
             </div>
             <div>
-                <img src="../img/Kelvin.svg">
-                <p class="texto-alterno text-center">Kelvin Cano</p>
-                <p>UI Developer</p>
+                <img src="../img/PorQue.svg" class="h-60">
+            </div>
+        </div>
+        <h2 class="text-2xl md:text-left md:text-4xl mt-12">
+            ¿Para <span class="underline underline-offset-8">qué</span>?
+        </h2>
+        <div class="grid grid-cols-2 gap-8 items-center mb-8">
+            <div class="mr-8">
+                <p>
+                    Este sitio esta destinado para cualquier persona que desea familiarizarse con el medio ambiente que
+                    nos rodea gracias a
+                    que ofrecemos informacion mediante nuestro blog ambiental, dar a conocer posibles eventos
+                    ambientales y promover la
+                    venta de productos ecologicos en la ciudad de Quetzaltenango
+                </p>
             </div>
             <div>
-                <img src="../img/Zoili.svg">
-                <p class="texto-alterno text-center">Zoila Sanchez</p>
-                <p>Back-end Developer</p>
-            </div>
-            <div>
-                <img src="../img/Guadaluper.svg">
-                <p class="texto-alterno text-center">Andrea Morales</p>
-                <p>Back-end Developer</p>
+                <img src="../img/ParaQuien.svg" class="h-60">
             </div>
         </div>
     </div>
