--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -41,12 +41,14 @@
                     Blog ambiental
                 </h1>
             </div>
-            <div class="grid grid-cols-2 xl:grid-cols-12 gap-8 xl:gap-12 my-8">
+            <div class="flex flex-col-reverse md:grid md:grid-cols-2 xl:grid-cols-12 gap-8 xl:gap-12 my-8">
+                <p class="ml-2 md:hidden -mt-4 text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em>
+                </p>
                 <div id="rectangulo-degradado-fondo" class="flex items-center justify-end xl:col-span-5">
                     <img src="../img/image-template-1.png" id="img-principal-blog">
                 </div>
                 <div class="xl:col-span-7">
-                    <p class="ml-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
                     <a href="#">
                         <h2 class="text-2xl text-center md:text-left md:text-4xl my-4 entrada-blog">Lorem Ipsum porro
                             quisquam est
@@ -63,90 +65,138 @@
             </div>
         </section>
         <section>
-            <div class="grid grid-cols-3 gap-8 xl:gap-12 my-8">
-                <div>
-                    <img src="../img/image-template-2.png">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 xl:gap-12 my-8">
+                <div class="flex flex-col-reverse md:inline md:pb-4">
+                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
+                            2021</em>
+                    </p>
+                    <img src="../img/image-template-2.png" class="mb-4">
                     <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
                             Lorem Ipsum porro quisquam est dolorem
                         </h3>
                     </a>
-                    <p>
+                    <p class="mb-4 md:my-4 md:mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
                         eros. Fusce in nunc dictum,
                         ornare neque ut, scelerisque urna.
                     </p>
-                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
                 </div>
-                <div>
-                    <img src="../img/image-template-3.png">
+                <div class="flex flex-col-reverse md:inline md:pb-4">
+                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
+                            2021</em>
+                    </p>
+                    <img src="../img/image-template-2.png" class="mb-4">
                     <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
                             Lorem Ipsum porro quisquam est dolorem
                         </h3>
                     </a>
-                    <p>
+                    <p class="mb-4 md:my-4 md:mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
                         eros. Fusce in nunc dictum,
                         ornare neque ut, scelerisque urna.
                     </p>
-                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
                 </div>
-                <div>
-                    <img src="../img/image-template-4.png">
+                <div class="flex flex-col-reverse md:inline md:pb-4">
+                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
+                            2021</em>
+                    </p>
+                    <img src="../img/image-template-2.png" class="mb-4">
                     <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
                             Lorem Ipsum porro quisquam est dolorem
                         </h3>
                     </a>
-                    <p>
+                    <p class="mb-4 md:my-4 md:mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
                         eros. Fusce in nunc dictum,
                         ornare neque ut, scelerisque urna.
                     </p>
-                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
                 </div>
-                <div>
-                    <img src="../img/image-template-2.png">
+                <div class="flex flex-col-reverse md:inline md:pb-4">
+                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
+                            2021</em>
+                    </p>
+                    <img src="../img/image-template-2.png" class="mb-4">
                     <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
                             Lorem Ipsum porro quisquam est dolorem
                         </h3>
                     </a>
-                    <p>
+                    <p class="mb-4 md:my-4 md:mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
                         eros. Fusce in nunc dictum,
                         ornare neque ut, scelerisque urna.
                     </p>
-                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
                 </div>
-                <div>
-                    <img src="../img/image-template-3.png">
+                <div class="flex flex-col-reverse md:inline md:pb-4">
+                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
+                            2021</em>
+                    </p>
+                    <img src="../img/image-template-2.png" class="mb-4">
                     <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
                             Lorem Ipsum porro quisquam est dolorem
                         </h3>
                     </a>
-                    <p>
+                    <p class="mb-4 md:my-4 md:mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
                         eros. Fusce in nunc dictum,
                         ornare neque ut, scelerisque urna.
                     </p>
-                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
                 </div>
-                <div>
-                    <img src="../img/image-template-4.png">
+                <div class="flex flex-col-reverse md:inline md:pb-4">
+                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
+                            2021</em>
+                    </p>
+                    <img src="../img/image-template-2.png" class="mb-4">
                     <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 entrada-blog">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
                             Lorem Ipsum porro quisquam est dolorem
                         </h3>
                     </a>
-                    <p>
+                    <p class="mb-4 md:my-4 md:mb-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
                         eros. Fusce in nunc dictum,
                         ornare neque ut, scelerisque urna.
                     </p>
-                    <p class="mt-2"><em>Por: <strong>Thelra Juarez</strong>, 5 de Mayo, 2021</em></p>
+                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
+                    <a href="#">
+                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
+                            Lorem Ipsum porro quisquam est dolorem
+                        </h3>
+                    </a>
                 </div>
             </div>
         </section>
