Blog consultas a API y pagina terminada

--- a/src/index.html
+++ b/src/index.html
@@ -64,14 +64,12 @@
                 <img src="./img/Blog-Ambiental.svg" class="md:w-7/12 md:mt-2 img-landPage">
                 <div class="md:5/12">
                     <h2 class="text-2xl text-center md:text-left md:text-4xl mt-8 mb-4">Blog Ambiental</h2>
-                    <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum
-                        dictum
-                        elit sit amet ligula eleifend, ut sollicitudin massa
-                        posuere. Sed condimen
-                        tum diam quis rhoncus fringilla.
+                    <p class="text-base text-center md:text-xl md:text-left">Blog Ambiental: Hemos creado está área en
+                        la página para que los amantes de la naturaleza puedan compartir diversa
+                        información, datos importantes, datos curiosos o de su creatividad, sobre la naturaleza.
                     </p>
                     <div class="link flex mt-4 md:justify-start justify-center">
-                        <a href="#">Empieza a leernos</a>
+                        <a href="./pages/Blog.html">Empieza a leernos</a>
                         <span class="material-symbols-outlined">
                             arrow_forward_ios
                         </span>
@@ -81,11 +79,13 @@
             <section class="md:flex mb-2 items-center">
                 <div class="md:w-7/12">
                     <h2 class="text-2xl text-center md:text-left md:text-4xl mb-4">Eventos ambientales</h2>
-                    <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum
-                        dictum
-                        elit sit amet ligula eleifend, ut sollicitudin massa
-                        posuere. Sed condimen
-                        tum diam quis rhoncus fringilla.
+                    <p class="text-base text-center md:text-xl md:text-left">Somos parte de la reforestación, cuidados
+                        del medio ambiente y trabajo en comunidad. Sabemos que una persona logra hacer
+                        cambios, pero si se unen muchas personas para llegar a un mismo fin se disfruta más y se tienen
+                        más posibilidades de
+                        lograrse. Acá podrás comunicar sobre cualquier evento o actividad que beneficie al medio
+                        ambiente y así lograras que
+                        muchas personas te apoyen y se unan a tu idea.
                     </p>
                     <div class="link flex mt-4 md:justify-start justify-center">
                         <a href="#">Empieza a descubrirlos</a>
@@ -101,11 +101,15 @@
                 <div class="md:5/12">
                     <h2 class="text-2xl text-center md:text-left md:text-4xl mt-8 mb-4">Venta de productos Ecológicos
                     </h2>
-                    <p class="text-base text-center md:text-xl md:text-left">Maecenas eu bibendum nulla. Vestibulum
-                        dictum
-                        elit sit amet ligula eleifend, ut sollicitudin massa
-                        posuere. Sed condimen
-                        tum diam quis rhoncus fringilla.
+                    <p class="text-base text-center md:text-xl md:text-left">Venta de productos Ecológicos: Los
+                        creadores de Tlátoc sabemos que como país tenemos gran porcentaje de comerciantes
+                        individuales y que no todos tienen una micro empresa, con el fin mejorar el medio ambiente y así
+                        poder apoyar a nuestros
+                        chapines hemos creado este área para que todos los comerciantes de plantas, árboles , semillas y
+                        cualquier cosa que
+                        beneficie a la tierra y medio ambiente , pueda postear acá su información ; logrando con esto
+                        que ellos se den a conocer
+                        y todos los interesados puedan recurrir en busca de su producto o servicio.
                     </p>
                     <div class="link flex mt-4 md:justify-start justify-center">
                         <a href="#">Empieza a comprarlos</a>
