--- a/src/pages/Blog.html
+++ b/src/pages/Blog.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="mx-6">
+    <div class="mx-6 xl:mx-24">
         <nav class="my-2">
             <div class="flex items-end justify-center">
                 <a href="../index.html"><img src="../img/Logo.svg" class="w-24"></a>
@@ -34,174 +34,14 @@
             </div>
             <hr class="mt-1 separador mb-8">
         </nav>
-        <section>
-            <div class="flex items-center">
-                <img src="../img/Rectangulo-degradado.png" class="h-16 mr-4">
-                <h1 class="text-3xl text-center md:text-left md:text-5xl">
-                    Blog ambiental
-                </h1>
-            </div>
-            <div class="flex flex-col-reverse md:grid md:grid-cols-2 xl:grid-cols-12 gap-8 xl:gap-12 my-8">
-                <p class="ml-2 md:hidden -mt-4 text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em>
-                </p>
-                <div id="rectangulo-degradado-fondo" class="flex items-center justify-end xl:col-span-5">
-                    <img src="../img/image-template-1.png" id="img-principal-blog">
-                </div>
-                <div class="xl:col-span-7">
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h2 class="text-2xl text-center md:text-left md:text-4xl my-4 entrada-blog">Lorem Ipsum porro
-                            quisquam est
-                            qui dolorem</h2>
-                    </a>
-                    <hr class="mt-1 separador-blog mb-8">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna. Praesent egestas consectetur erat, vitae consequat orci
-                        sodales a
-                    </p>
-                </div>
-            </div>
+        <section id="Blog-principal">
         </section>
-        <section>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 xl:gap-12 my-8">
-                <div class="flex flex-col-reverse md:inline md:pb-4">
-                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
-                            2021</em>
-                    </p>
-                    <img src="../img/image-template-2.png" class="mb-4">
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                    <p class="mb-4 md:my-4 md:mb-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna.
-                    </p>
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                </div>
-                <div class="flex flex-col-reverse md:inline md:pb-4">
-                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
-                            2021</em>
-                    </p>
-                    <img src="../img/image-template-2.png" class="mb-4">
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                    <p class="mb-4 md:my-4 md:mb-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna.
-                    </p>
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                </div>
-                <div class="flex flex-col-reverse md:inline md:pb-4">
-                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
-                            2021</em>
-                    </p>
-                    <img src="../img/image-template-2.png" class="mb-4">
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                    <p class="mb-4 md:my-4 md:mb-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna.
-                    </p>
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                </div>
-                <div class="flex flex-col-reverse md:inline md:pb-4">
-                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
-                            2021</em>
-                    </p>
-                    <img src="../img/image-template-2.png" class="mb-4">
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                    <p class="mb-4 md:my-4 md:mb-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna.
-                    </p>
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                </div>
-                <div class="flex flex-col-reverse md:inline md:pb-4">
-                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
-                            2021</em>
-                    </p>
-                    <img src="../img/image-template-2.png" class="mb-4">
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                    <p class="mb-4 md:my-4 md:mb-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna.
-                    </p>
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                </div>
-                <div class="flex flex-col-reverse md:inline md:pb-4">
-                    <p class="ml-2 md:hidden text-end"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio,
-                            2021</em>
-                    </p>
-                    <img src="../img/image-template-2.png" class="mb-4">
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl md:mt-8 entrada-blog hidden md:inline">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                    <p class="mb-4 md:my-4 md:mb-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit Nunc ac sodales ipsum. Morbi non mi
-                        eros. Fusce in nunc dictum,
-                        ornare neque ut, scelerisque urna.
-                    </p>
-                    <p class="ml-2 hidden md:inline"><em>Por: <strong>Thelra Juarez</strong>, 5 de Junio, 2021</em></p>
-                    <a href="#">
-                        <h3 class="text-xl text-center md:text-left md:text-2xl mt-8 mb-4 md:hidden">
-                            Lorem Ipsum porro quisquam est dolorem
-                        </h3>
-                    </a>
-                </div>
-            </div>
+        <section id="Blogs" class="grid grid-cols-1 md:grid-cols-3 gap-8 xl:gap-12 my-8">
         </section>
     </div>
     <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="../js/funcionalidadesBlog.js"></script>
 </body>
 
 </html>
