Responsive AboutUs page

--- a/src/pages/AboutUs.html
+++ b/src/pages/AboutUs.html
@@ -39,7 +39,7 @@
                 ¿<span class="underline underline-offset-8">Quiénes</span> somos?
             </h1>
         </div>
-        <p class="text-center mx-36">
+        <p class="text-center mx-4 md:mx-36">
             Somos estudiantes de la Universidad Rafael Landívar de Quetzaltenango, actualmente cursamos
             por el ultimo
             tramo de
@@ -52,7 +52,7 @@
                 Nuestro equipo
             </h2>
         </div>
-        <div class="grid grid-cols-4 gap-8">
+        <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
             <a href="https://github.com/Rafterminador" target="_blank">
                 <div class="flex flex-col items-center">
                     <img src="../img/Fernando.svg">
@@ -82,12 +82,12 @@
                 </div>
             </a>
         </div>
-        <h2 class="text-2xl md:text-left md:text-4xl mt-12 mb-8">
+        <h2 class="text-2xl text-center md:text-left md:text-4xl mt-12 mb-8">
             ¿Por <span class="underline underline-offset-8">qué</span>?
         </h2>
-        <div class="grid grid-cols-2 gap-8 items-center">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
             <div class="mr-8">
-                <p>
+                <p class="text-center md:text-left">
                     El motivo de este proyecto es construir y desplegar un sitio web enfocado en representar uno de los
                     17
                     objetivos de
@@ -96,7 +96,7 @@
                     terrestres”.
                 </p>
                 <br>
-                <p>
+                <p class="text-center md:text-left">
                     Elegimos enfocarnos en este objetivo porque estamos convencidos que es muy importante concientizar
                     acerca
                     del medio
@@ -107,12 +107,12 @@
                 <img src="../img/PorQue.svg" class="h-60">
             </div>
         </div>
-        <h2 class="text-2xl md:text-left md:text-4xl mt-12">
+        <h2 class="text-2xl text-center md:text-left md:text-4xl mt-12">
             ¿Para <span class="underline underline-offset-8">qué</span>?
         </h2>
-        <div class="grid grid-cols-2 gap-8 items-center mb-8">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center mb-8">
             <div class="mr-8">
-                <p>
+                <p class="text-center md:text-left">
                     Este sitio esta destinado para cualquier persona que desea familiarizarse con el medio ambiente que
                     nos rodea gracias a
                     que ofrecemos informacion mediante nuestro blog ambiental, dar a conocer posibles eventos
